--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
-# Compiled class file
+
 *.class
 
-# Log file
+
 *.log
 
-# BlueJ files
+
 *.ctxt
 
-# Mobile Tools for Java (J2ME)
+
 .mtj.tmp/
 
-# Package Files #
+
 *.jar
 *.war
 *.nar
@@ -18,11 +18,12 @@
 *.zip
 *.tar.gz
 *.rar
+*.iml
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+
 hs_err_pid*
 
-# Eclipse
+
 .metadata
 bin/
 tmp/
@@ -35,7 +36,7 @@ tmp/
 local.properties
 .settings/
 .loadpath
+dependency-reduced-pom.xml
 .recommenders
-players.yml
-
-.players/
+.idea/
+target/
