--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,9 +8,10 @@ Messages:
   prefix: '&4[&bConditionalEvents&4] '
   commandReload: '&aConfig Reloaded.'
   commandNoPermissions: '&cYou don''t have permissions to use this command.'
-  commandResetError: '&cUse &7/ce reset <player> <event>'
+  commandResetError: '&cUse &7/ce reset <player> <event>/all'
   eventDoesNotExists: '&cThat event doesn''t exists on the config.'
   eventDataReset: '&aData reset for player &e%player% &aon event &e%event%&a!'
+  eventDataResetAll: '&aAll data reset for player &e%player%&a!'
   eventEnableError: '&cUse &7/ce enable <event>'
   eventDisableError: '&cUse &7/ce disable <event>'
   eventEnabled: '&aEvent &7%event% &aenabled.'
