--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
             <version>5.0.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.discordsrv</groupId>
+            <artifactId>discordsrv</artifactId>
+            <version>1.26.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
