--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ dependency-reduced-pom.xml
 .recommenders
 .idea/
 target/
+/src/main/java/ce/ajneb97/api/ExampleAction.java
+/src/main/java/ce/ajneb97/api/ConditionalEventsAction.java
