--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ dependency-reduced-pom.xml
 target/
 /src/main/java/ce/ajneb97/api/ExampleAction.java
 /src/main/java/ce/ajneb97/api/ConditionalEventsAction.java
+/src/main/java/ce/ajneb97/managers/APIManager.java
